--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -53,6 +53,14 @@ services:
     environment:
       DSN: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
 
+  listener-service:
+    build:
+      context: ./../listener-service
+      dockerfile: ./../listener-service/listener-service.dockerfile
+    deploy:
+      mode: replicated
+      replicas: 1
+
   postgres:
     image: 'postgres:16.1'
     ports:
@@ -86,7 +94,7 @@ services:
       - "8025:8025"
 
   rabbitmq:
-    image: 'rabbitmq:3.9-alpine'
+    image: 'rabbitmq:3.13.2-alpine'
     ports:
       - "5672:5672"
     deploy:
