--- a/project/Makefile.windows
+++ b/project/Makefile.windows
@@ -56,7 +56,7 @@ build_mail:
     chdir ..\mail-service && set GOOS=linux&& set GOARCH=amd64&& set CGO_ENABLED=0 && go build -o ${MAIL_BINARY} ./cmd/api
     @echo Done!
 
-## build_front: builds the frone end binary
+## build_front: builds the front end binary
 build_front:
     @echo Building front end binary...
     chdir ..\front-end && set CGO_ENABLED=0&& set GOOS=windows&& go build -o ${FRONT_END_BINARY} ./cmd/web
